crates/parser/tests/cases/snapshots/cases__errors__contract_const_pub.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(contract_const_pub), module::parse_module,\n    \"contract C {\\n const pub x: u8\\n}\")"

---
error: `const pub` should be written `pub const`
  ┌─ contract_const_pub:2:2
  │
2 │  const pub x: u8
  │  ^^^^^^^^^


